--- a/chrome/locale/sr/options.dtd
+++ b/chrome/locale/sr/options.dtd
@@ -1,3 +1,3 @@
 <!ENTITY readability.keyboard.shortcuts.caption "Пречице на тастатури">
-<!ENTITY readability.keyboard.shortcuts.label "Било какве промене пречица на тастатури захтевају поновно покретање прегледача.">
-<!ENTITY readability.tools.shortcuts.label "Алатке пречица на тастатури се могу променити у прозорском окну за алатке.">
+<!ENTITY readability.keyboard.shortcuts.label "Свака промена пречица захтева поновно покретање прегледача.">
+<!ENTITY readability.tools.shortcuts.label "Пречице за алатке се могу променити у прозорском окну додатка.">
